fix for hamburger menu placement on mobile

--- a/content/themes/casper/assets/css/screen.css
+++ b/content/themes/casper/assets/css/screen.css
@@ -3044,9 +3044,6 @@ a.read-more{
 @media only screen
 and (min-device-width : 375px)
 and (max-device-width : 667px) {
-  .toggle-menu {
-    margin-top: 3px;
-  }
 
 }
 
